--- a/src/index.html
+++ b/src/index.html
@@ -42,7 +42,7 @@
         <ul>
             <title> WebSites </title>
             <li><a href="https://www.youtube.com/watch?v=3JluqTojuME">Short introduction</a></li>
-            <li><a href="https://www.youtube.com/watch?v=UB1O30fR-EE&t=78s">In-depth version</a></li>
+            <li><a href="https://www.youtube.com/watch?v=yfoY53QXEnI">In-depth version</a></li>
         </ul>
     </p>
     <p>
@@ -59,6 +59,5 @@
     <div> </div>
     <!--for styling -->
     <span> </span>
-    
 </body>
 </html>
