updating style sheets

--- a/src/page2.html
+++ b/src/page2.html
@@ -12,6 +12,6 @@
             <li><a href="page3.html">page 3</a></li>
         </ul>
         <h2> Page 2</h2>
-        <p> This is all my page 2 content</p>
+        <p class = "secondary"> This is all my page 2 content</p>
     </body>
 </html>
