--- a/src/page3.html
+++ b/src/page3.html
@@ -13,6 +13,6 @@
             <li>page 3</li>
         </ul>
         <h2> Page 3</h2>
-        <p> This is all my page 3 content</p>
+        <p class="secondary"> This is all my page 3 content</p>
     </body>
 </html>
