updated style sheets

--- a/src/index.html
+++ b/src/index.html
@@ -41,7 +41,7 @@
         <em><h4>It does ......</h4></em> 
         <ul>
             <title> WebSites </title>
-            <li><a href="https://www.youtube.com/watch?v=3JluqTojuME">Short introduction</a></li>
+            <li><a href="https://www.youtube.com/watch?v=gBi8Obib0tw">Short introduction</a></li>
             <li><a href="https://www.youtube.com/watch?v=yfoY53QXEnI">In-depth version</a></li>
         </ul>
     </p>
