upadted index.html

--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
         <em><h4>It does .....</h4></em>
         <ul>
             <title> WebSites </title>
-            <li><a href="XXXXX">XXXXXXXX</a></li>
+            <li><a href="https://classroom.google.com/c/MTQ4OTQ4MjM5NTk0/a/MTQ4OTQ5MDU5OTkz/details?cjc=p2jh35m">GitHub Webpage</a></li>
             <li><a href="XXXXX">XXXXXXXX</a></li>
         </ul>
     </p>
