--- a/src/index.html
+++ b/src/index.html
@@ -46,6 +46,15 @@
         </ul>
     </p>
     <p>
+        <strong><h3>JavaScript</h3></strong>
+        <em><h4>It does ......</h4></em> 
+        <ul>
+            <title> WebSites </title>
+            <li><a href="XXXXXX">Short introduction</a></li>
+            <li><a href="XXXXXXX">In-depth version</a></li>
+        </ul>
+    </p> <br>
+    <p>
         <strong><h3>React</h3></strong>
         <em><h4>It does ......</h4></em> 
         <ul>
