--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
     <p>
         <br>
         <strong><h3>GitHub</h3></strong>
-        <em><h4>It does .....</h4></em>
+        <em><h4>Resources</h4></em>
         <ul>
             <title> WebSites </title>
             <li><a href="https://www.youtube.com/watch?v=u-RLu_8kwA0">Creating GitHub Webpage</a></li>
@@ -31,7 +31,7 @@
         </ul>
     </p>
         <strong><h3>HTML</h3></strong>
-        <em><h4>It does ......</h4></em>
+        <em><h4>Resources</h4></em>
         <ul>
             <title> WebSites </title>
             <li><a href="https://www.youtube.com/watch?v=3JluqTojuME">Short introduction</a></li>
@@ -40,7 +40,7 @@
     </p>
     <p>
         <strong><h3>CSS</h3></strong>
-        <em><h4>It does ......</h4></em> 
+        <em><h4>Resources</h4></em> 
         <ul>
             <title> WebSites </title>
             <li><a href="https://www.youtube.com/watch?v=gBi8Obib0tw">Short introduction</a></li>
@@ -50,7 +50,7 @@
     </p>
     <p>
         <strong><h3>Wireframe</h3></strong>
-        <em><h4>It does ......</h4></em> 
+        <em><h4>Resources</h4></em> 
         <ul>
             <title> WebSites </title>
             <li><a href="https://www.usability.gov/how-to-and-tools/methods/prototyping.html">Tools and methods/prototyping</a></li>
@@ -63,7 +63,7 @@
     </p> <br>
     <p>
         <strong><h3>JavaScript</h3></strong>
-        <em><h4>It does ......</h4></em> 
+        <em><h4>Resources</h4></em> 
         <ul>
             <title> WebSites </title>
             <li><a href="https://www.freecodecamp.org/news/es5-to-esnext-heres-every-feature-added-to-javascript-since-2015-d0c255e13c6e/">ES5 to ESNext</a></li>
@@ -75,7 +75,7 @@
     </p> <br>
     <p>
         <strong><h3>Java</h3></strong>
-        <em><h4>It does ......</h4></em> 
+        <em><h4>Resources</h4></em> 
         <ul>
             <title> WebSites </title>
             <li><a href="https://www.freecodecamp.org/news/object-oriented-programming-concepts-21bb035f7260/">Java Object-Oriented Programming Concepts</a></li>
@@ -86,7 +86,7 @@
     </p> <br>
     <p>
         <strong><h3>React</h3></strong>
-        <em><h4>It does ......</h4></em> 
+        <em><h4>Resources</h4></em> 
         <ul>
             <title> WebSites </title>
             <li><a href="https://blog.logrocket.com/the-best-styling-in-react-tutorial-youve-ever-seen-676f1284b945/">Styling in React</a></li>
