--- a/src/index.html
+++ b/src/index.html
@@ -9,14 +9,14 @@
 <body>
     <h2>Jyothsna's Learning Page</h2>
     <br>
-    <ul> 
+    <ul>
         <li>Home</li>
         <li><a href="page2.html">page 2</a></li>
         <li><a href="page3.html">page 3</a></li>
     </ul>
     <img src="https://cdn.pixabay.com/photo/2018/09/04/10/27/learn-3653430_1280.jpg"><br>
     <ol>
-    <p>        
+    <p>
         <strong><h3>GitHub</h3></strong>
         <em><h4>Resources</h4></em>
         <ul>
@@ -37,7 +37,7 @@
     </p>
     <p>
         <strong><h3>CSS</h3></strong>
-        <em><h4>Resources</h4></em> 
+        <em><h4>Resources</h4></em>
         <ul>
             <title> WebSites </title>
             <li><a href="https://www.youtube.com/watch?v=gBi8Obib0tw">Quick guide</a></li>
@@ -46,7 +46,7 @@
     </p>
     <p>
         <strong><h3>Wireframe</h3></strong>
-        <em><h4>Resources</h4></em> 
+        <em><h4>Resources</h4></em>
         <ul>
             <title> WebSites </title>
             <li><a href="https://www.usability.gov/how-to-and-tools/methods/prototyping.html">Tools and methods/prototyping</a></li>
@@ -54,15 +54,15 @@
             <li><a href="https://balsamiq.com/wireframes/">Balsamiq</a></li>
             <li><a href="https://www.figma.com/files/recent">figma</a></li>
             <li><a href="https://www.adobe.com/uk/products/xd.html">Adobe</a></li>
-            <li><a href="https://www.invisionapp.com/">Invision App</a></li>
+            <li><a href="https://www.invisionapp.com/">Invision app</a></li>
         </ul>
     </p>
     <p>
         <strong><h3>JavaScript</h3></strong>
-        <em><h4>Resources</h4></em> 
+        <em><h4>Resources</h4></em>
         <ul>
             <title> WebSites </title>
-            <li><a href="https://www.freecodecamp.org/news/es5-to-esnext-heres-every-feature-added-to-javascript-since-2015-d0c255e13c6e/">ES5 to ESNext</a></li>
+            <li><a href="https://www.freecodecamp.org/news/es5-to-esnext-heres-every-feature-added-to-javascript-since-2015-d0c255e13c6e/">ES5 to ESnext</a></li>
             <li><a href="https://kentcdodds.com/blog/javascript-to-know-for-react">JavaScript to know for React</a></li>
             <li><a href="https://caniuse.com/">Can I use</a></li>
             <li><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript">Mozilla Org</a></li>
@@ -71,7 +71,7 @@
     </p>
     <p>
         <strong><h3>Java</h3></strong>
-        <em><h4>Resources</h4></em> 
+        <em><h4>Resources</h4></em>
         <ul>
             <title> WebSites </title>
             <li><a href="https://www.freecodecamp.org/news/object-oriented-programming-concepts-21bb035f7260/">Java Object-Oriented programming concepts</a></li>
@@ -79,19 +79,19 @@
             <li><a href="XXX">XXX</a></li>
             <li><a href="XXX">XXX</a></li>
         </ul>
-    </p> 
+    </p>
     <p>
         <strong><h3>React</h3></strong>
-        <em><h4>Resources</h4></em> 
+        <em><h4>Resources</h4></em>
         <ul>
             <title> WebSites </title>
             <li><a href="https://blog.logrocket.com/the-best-styling-in-react-tutorial-youve-ever-seen-676f1284b945/">Styling in React</a></li>
-            <li><a href="https://reactrouter.com/">Multiple pages - React Router: declarative routing</a></li>
-            <li><a href="https://reactrouter.com/web/guides/quick-start">Multiple pages - React Router: declarative routing</a></li>
+            <li><a href="https://reactrouter.com/">Multiple pages - React router: declarative routing</a></li>
+            <li><a href="https://reactrouter.com/web/guides/quick-start">Multiple pages - React router: declarative routing</a></li>
             <li><a href="https://auth0.com/">Authentication: Secure access for everyone but not just anyone</a></li>
             <li><a href="https://aws.amazon.com/cognito/">Amazon cognito</a></li>
-            <li><a href="https://firebase.google.com/docs/auth">Firebase Authentication</a></li>
-            <li><a href="https://auth0.com/docs/quickstart/spa/react">React SDK Quickstarts: Login</a></li>
+            <li><a href="https://firebase.google.com/docs/auth">Firebase authentication</a></li>
+            <li><a href="https://auth0.com/docs/quickstart/spa/react">React SDK quickstarts: Login</a></li>
             <li><a href="https://blog.logrocket.com/authentication-react-apps-aws-amplify-cognito/">AWS Authentication using Amplify and Cognito</a></li>
             <li><a href="https://blog.logrocket.com/user-authentication-firebase-react-apps/">Firebase user authentication</a></li>
             <li><a href="https://www.freecodecamp.org/news/react-context-in-5-minutes/">freecodecamp- React context API: state and levels of component</a></li>
@@ -100,18 +100,18 @@
             <li><a href="https://material-ui.com/">React components for faster and easier web development</a></li>
             <li><a href="https://dev.to/codeartistryio/the-react-cheatsheet-for-2020-real-world-examples-4hgg#components-and-props">React cheatsheet for 2020</a></li>
         </ul>
-    </p> 
+    </p>
     <p>
         <strong><h3>More resources</h3></strong>
-        <em><h4>Mixed tutorials</h4></em> 
+        <em><h4>Mixed tutorials</h4></em>
         <ul>
             <title> WebSites </title>
-            <li><a href="https://www.freecodecamp.org/news/learn-visual-studio-code-to-increase-productivity/">VS Code quickguide</a></li>
-            <li><a href="XXX">XXX</a></li>
+            <li><a href="https://www.freecodecamp.org/news/learn-visual-studio-code-to-increase-productivity/">VS code quickguide</a></li>
+            <li><a href="https://dev.to/notifications">Dev community</a></li>
             <li><a href="XXX">XXX</a></li>
         </ul>
     </p>
-    </ol>   
+    </ol>
     <!--for styling -->
     <div> </div>
     <!--for styling -->
