--- a/src/page2.html
+++ b/src/page2.html
@@ -1,4 +1,48 @@
-<!doctype html>
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>reactjs Search Results</title>
+  </head>
+
+  <body>
+    <section>
+      <div>
+        <a href="https://reactjs.org"
+          >React - A JavaScript Library for Building User Interfaces</a
+        >
+        <div>
+          <h3>reactjs.org</h3>
+        </div>
+        <div>
+          React makes it painless to create interactive UIs.
+        </div>
+      </div>
+      <div>
+        <a href="https://en.wikipedia.org/wiki/React_(web_framework)"
+          >React (web framework) - Wikipedia</a
+        >
+        <div>
+          <h3>https://en.wikipedia.org › wiki › React_(web_framework)</h3>
+        </div>
+        <div>
+          React is a JavaScript library for building user interfaces.
+        </div>
+      </div>
+      <div>
+        <a href="https://twitter.com/reactjs?lang=en"
+          >React (@reactjs) | Twitter</a
+        >
+        <div>
+          <h3>https://twitter.com › reactjs</h3>
+        </div>
+        <div>
+          The latest Tweets from React (@reactjs).
+        </div>
+      </div>
+    </section>
+  </body>
+</html>
+<!-- <!doctype html>
 <html>
     <head>
         <title>page #2</title>
@@ -14,4 +58,4 @@
         <h2> Page 2</h2>
         <p class = "secondary"> This is all my page 2 content</p>
     </body>
-</html>
+</html> -->
