update React list

--- a/src/index.html
+++ b/src/index.html
@@ -99,6 +99,8 @@
             <li><a href="https://www.robinwieruch.de/react-testing-library">How to use react testing library</a></li>
             <li><a href="https://material-ui.com/">React components for faster and easier web development</a></li>
             <li><a href="https://dev.to/codeartistryio/the-react-cheatsheet-for-2020-real-world-examples-4hgg#components-and-props">React cheatsheet for 2020</a></li>
+            <li><a href="https://testing-library.com/docs/react-testing-library/intro">React testing library intro</a></li>
+            <li><a href="https://www.robinwieruch.de/react-testing-library">React testing library</a></li>
         </ul>
     </p>
     <p>
