--- a/src/page2.html
+++ b/src/page2.html
@@ -1,11 +1,38 @@
 <!DOCTYPE html>
-<html>
+<!-- <html>
   <head>
     <title>reactjs Search Results</title>
   </head>
 
   <body>
-    <section>
+  </body>
+</html> -->
+<!doctype html>
+<html>
+    <head>
+        <title>page #2</title>
+        <link href="styles/main.css" rel="stylesheet" type="text/css"/>
+            <title>reactjs Search Results</title>
+            <script src="https://unpkg.com/react@16/umd/react.development.js"></script>
+            <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
+            <script src="https://unpkg.com/babel-standalone@6.26.0/babel.js"></script>
+    </head>
+    <body>
+        <div id="root">
+        </div>
+        <!-- our script must have type="text/babel" for Babel to work -->
+    <script type="text/babel">
+                        ReactDOM.render(
+        // React code will go here
+      </script>
+        <h2>Jyothsna's Learning Page</h2>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li>page 2</li>
+            <li><a href="page3.html">page 3</a></li>
+        </ul>
+        <h2> Page 2</h2>
+            <section>
       <div>
         <a href="https://reactjs.org"
           >React - A JavaScript Library for Building User Interfaces</a
@@ -40,22 +67,5 @@
         </div>
       </div>
     </section>
-  </body>
-</html>
-<!-- <!doctype html>
-<html>
-    <head>
-        <title>page #2</title>
-        <link href="styles/main.css" rel="stylesheet" type="text/css"/>
-    </head>
-    <body>
-        <h2>Jyothsna's Learning Page</h2>
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li>page 2</li>
-            <li><a href="page3.html">page 3</a></li>
-        </ul>
-        <h2> Page 2</h2>
-        <p class = "secondary"> This is all my page 2 content</p>
     </body>
-</html> -->
+</html>
