--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,38 @@
         <li><a href="page3.html">page 3</a></li>
     </ul>
     <img src="https://cdn.pixabay.com/photo/2018/09/04/10/27/learn-3653430_1280.jpg"><br>
+    <div class="row">
+        <div class="col-6">
+                <p>
+                    <h3>GitHub</h3>
+                    </strong>
+                    <em>
+                        <h4>Resources</h4>
+                    </em>
+                    <ul>
+                        <title> WebSites </title>
+                        <li><a href="https://product.hubspot.com/blog/git-and-github-tutorial-for-beginners">Git or Github tutorial for beginners</a></li>
+                        <li><a href="https://agripongit.vincenttunru.com/">Git commands</a></li>
+                        <li><a href="https://hackernoon.com/understanding-git-fcffd87c15a3">Understanding Git</a></li>
+                        <li><a href="xxxx">xxxx</a></li>
+                    </ul>
+                </p>
+        </div>
+        <div class="col-6">
+            <p>
+                <h3>HTML</h3>
+                </strong>
+                <em>
+                    <h4>Resources</h4>
+                </em>
+                <ul>
+                    <title> WebSites </title>
+                    <li><a href="https://www.youtube.com/watch?v=3JluqTojuME">Quick guide</a></li>
+                    <li><a href="https://www.youtube.com/watch?v=UB1O30fR-EE&t=78s">In-depth version</a></li>
+                </ul>
+            </p>
+        </div>
+    </div>
         <div class="row">
             <div class="col-6">
                 <p>
@@ -134,20 +166,6 @@
                             <li><a href="https://dev.to/notifications">Dev community</a></li>
                             <li><a href="XXX">XXX</a></li>
                         </ul>
-                        </p>
-                    </div>
-                    <div class="col-6">
-                        <p>
-                            <h3>HTML</h3>
-                            </strong>
-                            <em>
-                                <h4>Resources</h4>
-                            </em>
-                            <ul>
-                                <title> WebSites </title>
-                                <li><a href="https://www.youtube.com/watch?v=3JluqTojuME">Quick guide</a></li>
-                                <li><a href="https://www.youtube.com/watch?v=UB1O30fR-EE&t=78s">In-depth version</a></li>
-                            </ul>
                         </p>
                     </div>
                 </div>
