update responsive design

--- a/src/index.html
+++ b/src/index.html
@@ -59,6 +59,8 @@
                     <title> WebSites </title>
                     <li><a href="https://www.youtube.com/watch?v=gBi8Obib0tw">Quick guide</a></li>
                     <li><a href="https://www.youtube.com/watch?v=yfoY53QXEnI">In-depth version</a></li>
+                    <li><a href="https://css-tricks.com/">CSS-Tricks</a></li>
+                    
                 </ul>
                 </p>
             </div>
