--- a/src/index.html
+++ b/src/index.html
@@ -80,6 +80,7 @@
                     <li><a href="https://www.figma.com/files/recent">figma</a></li>
                     <li><a href="https://www.adobe.com/uk/products/xd.html">Adobe</a></li>
                     <li><a href="https://www.invisionapp.com/">Invision app</a></li>
+                    <li><a href="https://mediaqueri.es/">Media Queries</a></li>
                 </ul>
                 </p>
             </div>
