--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,7 @@
         <li><a href="page3.html">page 3</a></li>
     </ul>
     <img src="https://cdn.pixabay.com/photo/2018/09/04/10/27/learn-3653430_1280.jpg"><br>
+    <div class="container">
     <div class="row">
         <div class="col-6">
                 <p>
@@ -46,6 +47,8 @@
             </p>
         </div>
     </div>
+    </div>
+    <div class="container">
         <div class="row">
             <div class="col-6">
                 <p>
@@ -85,6 +88,8 @@
                 </p>
             </div>
         </div>
+    </div>
+    <div class="container">
     <div class="row">
         <div class="col-6">
             <p>
@@ -123,6 +128,7 @@
             </p>
         </div>
     </div>
+    </div>  
         <p>
             <strong>
                 <h3>React</h3>
