--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,10 @@
 <!doctype html>
 <html>
-
 <head>
     <title> Jyothsna's Learning Page</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="styles/main.css" type="text/css" />
+    <!-- <link rel="stylesheet" href="styles/main.css" type="text/css" /> -->
 </head>
-
 <body>
     <h2>Jyothsna's Learning Page</h2>
     <br>
