--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,9 @@
 <head>
     <title> Jyothsna's Learning Page</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
-    <!-- <link rel="stylesheet" href="styles/main.css" type="text/css" /> -->
+    <script src="https://code.jquery.com/jquery-3.1.0.min.js"></script>
+    <script src="bootstrap-3.3.7-dist/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="styles/main.css" type="text/css" />
 </head>
 <body>
     <h2>Jyothsna's Learning Page</h2>
@@ -13,12 +15,12 @@
         <li><a href="page2.html">page 2</a></li>
         <li><a href="page3.html">page 3</a></li>
     </ul>
-    <img src="https://cdn.pixabay.com/photo/2018/09/04/10/27/learn-3653430_1280.jpg"><br>
+<!--     <img src="https://cdn.pixabay.com/photo/2018/09/04/10/27/learn-3653430_1280.jpg"><br> -->
     <div class="container">
         <div class="row">
             <div class="col-12 col-md-6 col-lg-3">
-                <p>
-                <h3>GitHub</h3>
+                <div class = "section section.one">  
+                    <h3>GitHub</h3>
                     <ol>
                         <ul>
                             <li><a href="https://product.hubspot.com/blog/git-and-github-tutorial-for-beginners">Git or
@@ -28,9 +30,9 @@
                             <li><a href="xxxx">xxxx</a></li>
                         </ul>
                     </ol>
-                </p>
-                <p>
-                <h3>HTML</h3>
+                </div>
+                <div class = "section section.two">
+                    <h3>HTML</h3>
                     <ol>
                         <ul>
                             <li><a href="https://www.youtube.com/watch?v=3JluqTojuME">Quick guide</a></li>
@@ -39,9 +41,9 @@
                                     and myths</a></li>
                         </ul>
                     </ol>
-                </p>
-                <p>
-                <h3>CSS</h3>
+                </div>
+                <div class = "section section.three">
+                    <h3>CSS</h3>
                     <ol>
                         <ul>
                             <li><a href="https://www.youtube.com/watch?v=gBi8Obib0tw">Quick guide</a></li>
@@ -51,25 +53,25 @@
                                     documentation</a></li>
                         </ul>
                     </ol>
-                </p>
-                <p>
-                <ol>
-                    <ul>
-                        <li><a href="https://www.usability.gov/how-to-and-tools/methods/prototyping.html">Tools
-                                and methods/prototyping</a></li>
-                        <li><a
-                                href="https://www.justinmind.com/blog/low-fidelity-vs-high-fidelity-wireframing-is-paper-dead/">Low
-                                fidelity vs high fidelity wireframes</a></li>
-                        <li><a href="https://balsamiq.com/wireframes/">Balsamiq</a></li>
-                        <li><a href="https://www.figma.com/files/recent">figma</a></li>
-                        <li><a href="https://www.adobe.com/uk/products/xd.html">Adobe</a></li>
-                        <li><a href="https://www.invisionapp.com/">Invision app</a></li>
-                        <li><a href="https://mediaqueri.es/">Media Queries</a></li>
-                    </ul>
-                </ol>
-                </p>
-                <p>
-                <h3>JavaScript</h3>
+                </div>
+                <div class ="section section.four">
+                    <ol>
+                        <ul>
+                            <li><a href="https://www.usability.gov/how-to-and-tools/methods/prototyping.html">Tools
+                                    and methods/prototyping</a></li>
+                            <li><a
+                                    href="https://www.justinmind.com/blog/low-fidelity-vs-high-fidelity-wireframing-is-paper-dead/">Low
+                                    fidelity vs high fidelity wireframes</a></li>
+                            <li><a href="https://balsamiq.com/wireframes/">Balsamiq</a></li>
+                            <li><a href="https://www.figma.com/files/recent">figma</a></li>
+                            <li><a href="https://www.adobe.com/uk/products/xd.html">Adobe</a></li>
+                            <li><a href="https://www.invisionapp.com/">Invision app</a></li>
+                            <li><a href="https://mediaqueri.es/">Media Queries</a></li>
+                        </ul>
+                    </ol>
+                </div>
+                <div class="section section.five">
+                    <h3>JavaScript</h3>
                 <ol>
                     <ul>
                         <li><a
@@ -84,9 +86,9 @@
                         </li>
                     </ul>
                 </ol>
-                </p>
-                <p>
-                <h3>Java</h3>
+                </div>
+                <div class="section section.six">
+                    <h3>Java</h3>
                 <ol>
                     <ul>
                         <li><a
@@ -98,9 +100,9 @@
                         <li><a href="XXX">XXX</a></li>
                     </ul>
                 </ol>
-                </p>
-                <p>
-                <h3>React</h3>
+                </div>
+                <div class = "section section.seven"> 
+                    <h3>React</h3>
                 <ol>
                     <ul>
                         <li><a
@@ -139,9 +141,9 @@
                                 library</a></li>
                     </ul>
                 </ol>
-                </p>
-                <p>
-                <h3>Miscellaneous resources</h3>
+                </div>
+                <div class = "section section.eight">
+                    <h3>Miscellaneous resources</h3>
                 <ol>
                     <ul>
                         <li><a
@@ -152,6 +154,7 @@
                         <li><a href="https://www.smashingmagazine.com/">Smashingmagazine</a></li>
                     </ul>
                 </ol>
+                </div>
             </div>
         </div>
     </div>
