--- a/src/index.html
+++ b/src/index.html
@@ -3,8 +3,8 @@
 <head>
     <title> Jyothsna's Learning Page</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
-    <script src="https://code.jquery.com/jquery-3.1.0.min.js"></script>
-    <script src="bootstrap-3.3.7-dist/js/bootstrap.min.js"></script>
+    <!-- <script src="https://code.jquery.com/jquery-3.1.0.min.js"></script>
+    <script src="bootstrap-3.3.7-dist/js/bootstrap.min.js"></script> -->
     <link rel="stylesheet" href="styles/main.css" type="text/css" />
 </head>
 <body>
@@ -18,8 +18,7 @@
 <!--     <img src="https://cdn.pixabay.com/photo/2018/09/04/10/27/learn-3653430_1280.jpg"><br> -->
     <div class="container">
         <div class="row">
-            <div class="col-12 col-md-6 col-lg-3">
-                <div class = "section section.one">  
+                <div class = "section section.one col-12 col-md-6 col-lg-3">  
                     <h3>GitHub</h3>
                     <ol>
                         <ul>
@@ -31,7 +30,7 @@
                         </ul>
                     </ol>
                 </div>
-                <div class = "section section.two">
+                <div class = "section section.two col-12 col-md-6 col-lg-3">
                     <h3>HTML</h3>
                     <ol>
                         <ul>
@@ -42,7 +41,7 @@
                         </ul>
                     </ol>
                 </div>
-                <div class = "section section.three">
+                <div class = "section section.three col-12 col-md-6 col-lg-3">
                     <h3>CSS</h3>
                     <ol>
                         <ul>
@@ -54,7 +53,7 @@
                         </ul>
                     </ol>
                 </div>
-                <div class ="section section.four">
+                <div class ="section section.four col-12 col-md-6 col-lg-3">
                     <ol>
                         <ul>
                             <li><a href="https://www.usability.gov/how-to-and-tools/methods/prototyping.html">Tools
@@ -70,7 +69,7 @@
                         </ul>
                     </ol>
                 </div>
-                <div class="section section.five">
+                <div class="section section.five col-12 col-md-6 col-lg-3">
                     <h3>JavaScript</h3>
                 <ol>
                     <ul>
@@ -87,7 +86,7 @@
                     </ul>
                 </ol>
                 </div>
-                <div class="section section.six">
+                <div class="section section.six col-12 col-md-6 col-lg-3">
                     <h3>Java</h3>
                 <ol>
                     <ul>
@@ -101,7 +100,7 @@
                     </ul>
                 </ol>
                 </div>
-                <div class = "section section.seven"> 
+                <div class = "section section.seven col-12 col-md-6 col-lg-3"> 
                     <h3>React</h3>
                 <ol>
                     <ul>
@@ -142,7 +141,7 @@
                     </ul>
                 </ol>
                 </div>
-                <div class = "section section.eight">
+                <div class = "section section.eight col-12 col-md-6 col-lg-3">
                     <h3>Miscellaneous resources</h3>
                 <ol>
                     <ul>
