--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
         <li><a href="page2.html">page 2</a></li>
         <li><a href="page3.html">page 3</a></li>
     </ul>
-<!--     <img src="https://cdn.pixabay.com/photo/2018/09/04/10/27/learn-3653430_1280.jpg"><br> -->
+    <img src="https://cdn.pixabay.com/photo/2018/09/04/10/27/learn-3653430_1280.jpg"><br>
     <div class="container">
         <div class="row">
                 <div class = "section section.one col-12 col-md-6 col-lg-3">  
