--- a/src/index.html
+++ b/src/index.html
@@ -55,6 +55,7 @@
                     </ol>
                 </div>
                 <div class ="section section.four col-12 col-md-6 col-lg-3">
+                    <h3>Wireframes</h3>
                     <ol>
                         <ul>
                             <li><a href="https://www.usability.gov/how-to-and-tools/methods/prototyping.html">Tools
