--- a/src/index.html
+++ b/src/index.html
@@ -51,6 +51,7 @@
                             <li><a href="https://css-tricks.com/">CSS-Tricks</a></li>
                             <li><a href="https://getbootstrap.com/docs/4.3/getting-started/introduction/">Bootstrap
                                     documentation</a></li>
+                            <li><a href="https://getbootstrap.com/docs/4.3/getting-started/introduction/">Getting started with Bootstrap</a></li>                                    
                         </ul>
                     </ol>
                 </div>
@@ -140,6 +141,10 @@
                                 library intro</a></li>
                         <li><a href="https://www.robinwieruch.de/react-testing-library">React testing
                                 library</a></li>
+                        <li><a href="https://www.npmjs.com/package/npx">About npx</a></li>
+                        <li><a href="https://reactjs.org/docs/jsx-in-depth.html">JSX in depth</a></li>
+                        <li><a href="https://react-cn.github.io/react/docs/tags-and-attributes.html">Tags and attributes</a></li>
+                        <li><a href="https://techreturners.github.io/frontend/006_react_gh_pages/">TR- Hosting a React App on Github pages</a></li>
                     </ul>
                 </ol>
                 </div>
